
Changes in Release 1.1.0
=============================================
- Attribute caching in LDAP and relational database connectors has been disabled by default until
  the cache is properly cleared when a user's session expires or is destroyed.

[SC-37] - Filtering engine results in intersection of policies; union of policies is desired
[SC-38] - StoredIDStore: invalid character in prepared statement (Oracle only)
[SC-39] - Add ability to explicitly deny the release attributes
[SC-40] - Allow macros within configuration resources to be expanded when the resource is loaded
[SC-42] - Allow for ResourceBackedMetadataProvider as a metadata provider resource type
[SC-43] - Create a new Resource type that can read information from a Subversion respository
[SC-44] - StoredIDStore Connection Resource Leak
[SC-45] - Upgrade to OpenSAML 2.2.0
[SC-46] - Upgrade to VT LDAP lib version 2.8.2
[SC-47] - Check to see if the configured JDBC driver is available on the classpath, if not then error out
[SC-48] - Blank value for edupersonaffiliation in directory causes exception when evaluating eduPersonScopedAffiliation
[SC-49] - Add version information in library JAR manifest and provide command line tool to view it
[SC-50] - Provide options to enumerate trusted names for static PKIX trust engines
[SC-52] - Include SMTPAppender dependencies in base distribution
[SC-55] - Cleanup StorageService entry classes
[SC-56] - logback SMTP appender PatterLayout interspersed with stack trace

[SIDP-200] - attribute-filter.xml AtributeRule ignoreCase logic is backwards
[SIDP-213] - aacli.sh computedid Exception in thread "main" java.lang.NullPointerException
[SIDP-220] - creation of mapped attribute in attribute-resolver doesn't seem correct