@@ -20,6 +20,7 @@ Changes in Release 1.1.0
 [SC-52] - Include SMTPAppender dependencies in base distribution
 [SC-55] - Cleanup StorageService entry classes
 [SC-56] - logback SMTP appender PatterLayout interspersed with stack trace
+[SC-57] - The RelationalDatabase connector is missing a noResultsIsError like the LDAP connector
 
 [SIDP-200] - attribute-filter.xml AtributeRule ignoreCase logic is backwards
 [SIDP-213] - aacli.sh computedid Exception in thread "main" java.lang.NullPointerException
